<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.richard.htv.TaskActivity">

    <Button
        android:id="@+id/Home"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/HOME"
        android:onClick="Go_Home"/>

    <TextView
        android:id="@+id/CurrentPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/Home"
        android:text="@string/CP"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/NumPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="220dp"
        android:layout_marginLeft="220dp"
        android:layout_below="@+id/Home"
        android:text="@string/Points"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Desire1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/Home"
        android:text="@string/Desire1"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Point1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/Home"
        android:layout_marginStart="220dp"
        android:layout_marginLeft="220dp"
        android:text="@string/Point1"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Desire2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/Desire1"
        android:text="@string/Desire2"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Point2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/Point1"
        android:layout_marginStart="220dp"
        android:layout_marginLeft="220dp"
        android:text="@string/Point2"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Desire3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/Desire2"
        android:text="@string/Desire3"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Point3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/Point2"
        android:layout_marginStart="220dp"
        android:layout_marginLeft="220dp"
        android:text="@string/Point3"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Desire4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/Desire3"
        android:text="@string/Desire4"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Point4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/Point3"
        android:layout_marginStart="220dp"
        android:layout_marginLeft="220dp"
        android:text="@string/Point4"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Desire5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/Desire4"
        android:text="@string/Desire5"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Point5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/Point4"
        android:layout_marginStart="220dp"
        android:layout_marginLeft="220dp"
        android:text="@string/Point5"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Desire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_below="@+id/Desire5"
        android:text="@string/Desire"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/newDesire"
        android:inputType="text"
        android:labelFor="@+id/Task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_below="@+id/Desire5"
        android:text="@string/newdesire"
        android:textSize="18sp"
        android:onClick="Set" />

    <TextView
        android:id="@+id/Points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_below="@+id/Desire"
        android:text="@string/Point"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/newPoints"
        android:inputType="number"
        android:labelFor="@+id/Task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_below="@+id/Desire"
        android:text="@string/newpoints"
        android:textSize="18sp"
        android:onClick="Set"/>

    <Button
        android:id="@+id/Add"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newDesire"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/ADD"
        android:onClick="Add"/>

</RelativeLayout>
