<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.richard.htv.TaskActivity">

    <Button
        android:id="@+id/Home"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/HOME"
        android:onClick="Go_Home"/>

    <TextView
        android:id="@+id/CurrentPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_below="@+id/Home"
        android:text="@string/CP"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/NumPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="220dp"
        android:layout_marginLeft="220dp"
        android:layout_below="@+id/Home"
        android:text="@string/Points"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Task1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/Home"
        android:text="@string/Task1"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Point1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/Home"
        android:layout_marginStart="250dp"
        android:layout_marginLeft="250dp"
        android:text="@string/Point1"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Task2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/Task1"
        android:text="@string/Task2"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Point2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/Point1"
        android:layout_marginStart="250dp"
        android:layout_marginLeft="250dp"
        android:text="@string/Point2"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Task3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/Task2"
        android:text="@string/Task3"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Point3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/Point2"
        android:layout_marginStart="250dp"
        android:layout_marginLeft="250dp"
        android:text="@string/Point3"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Task4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/Task3"
        android:text="@string/Task4"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Point4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/Point3"
        android:layout_marginStart="250dp"
        android:layout_marginLeft="250dp"
        android:text="@string/Point4"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Task5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/Task4"
        android:text="@string/Task5"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Point5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/Point4"
        android:layout_marginStart="250dp"
        android:layout_marginLeft="250dp"
        android:text="@string/Point5"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_below="@+id/Task5"
        android:text="@string/Task"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/newTask"
        android:inputType="text"
        android:labelFor="@+id/Task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_below="@+id/Task5"
        android:text="@string/newtask"
        android:textSize="18sp"
        android:focusable="false"
        android:onClick="Set"/>

    <TextView
        android:id="@+id/Points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_below="@+id/Task"
        android:text="@string/Point"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/newPoints"
        android:inputType="number"
        android:labelFor="@+id/Task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_below="@+id/Task"
        android:text="@string/newpoints"
        android:textSize="18sp"
        android:focusable="false"
        android:onClick="Set"/>

    <Button
        android:id="@+id/Add"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newTask"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/ADD"
        android:onClick="Add"/>

</RelativeLayout>
